Fixed the endpoint GET /game/{game}/board of the resources service, including the specification
